--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,30 +1,16 @@
-<!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <!-- Unique identifier of the plugin. It should be FQN. It cannot be changed between the plugin versions. -->
     <id>com.prismstats.plugin.jetbrains</id>
-
-    <!-- Public plugin name should be written in Title Case.
-         Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-name -->
     <name>PrismStats</name>
+    <version>0.1.1</version>
+    <vendor email="support@prismstats.com" url="https://prismstats.com">PrismStats</vendor>
+    <description>
+        <![CDATA[PrismStats is an IDE plugin that tracks statistics on IDE usage. This includes information such as time spent in code, the languages most frequently used, and the files being edited.]]>
+    </description>
 
-    <!-- A displayed Vendor name or Organization ID displayed on the Plugins Page. -->
-    <vendor email="support@prismstats.com" url="https://www.yourcompany.com">PrismStats</vendor>
-
-    <!-- Description of the plugin displayed on the Plugin Page and IDE Plugin Manager.
-         Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
-         Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
-    <description><![CDATA[
-    aOWJUDHBIWAH IOUAG DOagw Og DUgz OGDAG DWOIAGD AGWDG aogwD OIAGWDOAgDWOG aouDG AOuWGD OauwgDoaGWDOagWDOUagDOUAg DOA D AOIGWD AOGDOAgzD IOAG DOUIAG DUOZGAD OUAWGDOUA GDOUIAgz DOZGADOUZFG
-  ]]></description>
-
-    <!-- Product and plugin compatibility requirements.
-         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-compatibility.html -->
+    <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.platform</depends>
 
-    <!-- Extension points defined by the plugin.
-         Read more: https://plugins.jetbrains.com/docs/intellij/plugin-extension-points.html -->
     <extensions defaultExtensionNs="com.intellij">
-
         <statusBarWidgetFactory implementation="com.prismstats.plugin.jetbrains.CustomStatusBar"
                                 id="com.prismstats.plugin.jetbrains.CustomStatusBar"
                                 order="first" />
