Implement file and project collectors in PrismStats plugin
Created new FileCollector and ProjectCollector classes designed to collect data about individual files and projects in PrismStats IntelliJ plugin. Further integrated these collectors in the listener and start-up handler to gather data in response to relevant events, providing real-time updates.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -31,6 +31,12 @@
         <postStartupActivity implementation="com.prismstats.plugin.jetbrains.StartupHandler" />
     </extensions>
 
+    <application-components>
+        <component>
+            <implementation-class>com.prismstats.plugin.jetbrains.PrismStats</implementation-class>
+        </component>
+    </application-components>
+
     <actions>
         <action id="customSettingsMenu" class="com.prismstats.plugin.jetbrains.settingsmenu.CustomSettingsMenu" text="PrismStats">
             <add-to-group group-id="ToolsMenu" anchor="first" />
