Update logging and plugin metadata, improve icons, refine CLI download link
Added detailed logging into PrismStats.java aiding troubleshooting. Made necessary updates on plugin.xml manifest including URL, dependency on IntelliJ platform, and its since-build version. The icons for both normal and dark modes were also updated. Moreover, the CLI download link is now pointing to the official GitHub release page.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,4 +1,4 @@
-<idea-plugin>
+<idea-plugin url="https://prismstats.com" require-restart="true">
     <id>com.prismstats.plugin.jetbrains</id>
     <name>PrismStats</name>
     <version>0.1.1</version>
@@ -20,6 +20,8 @@
             <a href="https://github.com/PrismStats/p-jetbrains-prismstats">View on GitHub</a>
         ]]>
     </description>
+
+    <idea-version since-build="213" />
 
     <depends>com.intellij.modules.lang</depends>
     <depends>com.intellij.modules.platform</depends>
