--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,9 +1,9 @@
 <idea-plugin url="https://prismstats.com" require-restart="true">
     <id>com.prismstats.plugin.jetbrains</id>
     <name>PrismStats</name>
-    <version>1.2.0</version>
+    <version>1.3.0</version>
     <vendor email="support@prismstats.com" url="https://prismstats.com">PrismStats</vendor>
-    <idea-version since-build="222.*" until-build="233.*" />
+    <idea-version since-build="221" />
 
     <description>
         <![CDATA[
@@ -25,8 +25,8 @@
 
     <change-notes>
         <![CDATA[
-            <h2>1.2.0 - Update collectors to improve data collection and handling </h2>
-            <p>The code is updated to improve data collection by adding checks for existing files and projects to prevent duplication. The JSONObject is also replaced with JsonObject for better compatibility and performance. These changes help to make the data collection process more efficient and accurate, thereby improving the overall functionality of the plugin.</p>
+            <h2>1.3.0 - Add DataCollector class and improve compatibility</h2>
+            <p>Introduce a new class, DataCollector, to track lines and characters in a document. Update PrismStats plugin to improve its compatibility with different versions of IntelliJ IDEA. Ensure compatibility with Kotlin 1.9.21 and IntelliJ plugin 1.16.1. The target IDE platform has been changed as well.</p>
         ]]>
     </change-notes>
 
