--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin url="https://prismstats.com" require-restart="true">
     <id>com.prismstats.plugin.jetbrains</id>
     <name>PrismStats</name>
-    <version>1.3.1</version>
+    <version>1.3.2</version>
     <vendor email="support@prismstats.com" url="https://prismstats.com">PrismStats</vendor>
     <idea-version since-build="221" />
 
@@ -14,7 +14,7 @@
                 <li>Search for <b>PrismStats.</b></li>
                 <li>Click the green <b>Install</b> button.</li>
                 <li>Restart your IDE.</li>
-                <li>Enter your <a href="https://prismstats.com/dashboard/settings#apikey">API Key</a> in <b>Tools -&gt; PrismStats -&gt; Enter API Key</b>, then click Save.</li>
+                <li>Enter your <a href="https://prismstats.com/dashboard/settings/key">API Key</a> in <b>Tools -&gt; PrismStats -&gt; Enter API Key</b>, then click Save.</li>
                 <li>Use your IDE and your coding activity will be displayed on your <a href="https://prismstats.com/dashboard">PrismStats Dashboard</a>.</li>
             </ol>
 
@@ -25,8 +25,8 @@
 
     <change-notes>
         <![CDATA[
-            <h2>1.3.0 - Add DataCollector class and improve compatibility</h2>
-            <p>Introduce a new class, DataCollector, to track lines and characters in a document. Update PrismStats plugin to improve its compatibility with different versions of IntelliJ IDEA. Ensure compatibility with Kotlin 1.9.21 and IntelliJ plugin 1.16.1. The target IDE platform has been changed as well.</p>
+            <h2>1.3.2 - Improve thread-safety and optimize data collection</h2>
+            <p>DataCollector now uses AtomicInteger for line and character count to improve thread-safety. Also, removed unnecessary array splitting in DocumentListener when counting lines, using the getLineCount() method instead for efficiency. Split bigger methods into smaller ones for better readability and organization.</p>
         ]]>
     </change-notes>
 
