--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin url="https://prismstats.com" require-restart="true">
     <id>com.prismstats.plugin.jetbrains</id>
     <name>PrismStats</name>
-    <version>1.3.2</version>
+    <version>1.3.3</version>
     <vendor email="support@prismstats.com" url="https://prismstats.com">PrismStats</vendor>
     <idea-version since-build="221" />
 
@@ -25,8 +25,8 @@
 
     <change-notes>
         <![CDATA[
-            <h2>1.3.2 - Improve thread-safety and optimize data collection</h2>
-            <p>DataCollector now uses AtomicInteger for line and character count to improve thread-safety. Also, removed unnecessary array splitting in DocumentListener when counting lines, using the getLineCount() method instead for efficiency. Split bigger methods into smaller ones for better readability and organization.</p>
+            <h2>1.3.2 - Refactor document change event handling logic</h2>
+            <p>Simplified the logic inside the documentChangedNonBulk method in DocumentListener for clarity, efficiency, and readability. Instead of storing old values and calculating changes, the updated code makes decisions based on event differences, eliminating unnecessary operations. This also improves thread-safety by reducing shared state manipulation</p>
         ]]>
     </change-notes>
 
