--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin url="https://prismstats.com" require-restart="true">
     <id>com.prismstats.plugin.jetbrains</id>
     <name>PrismStats</name>
-    <version>1.3.3</version>
+    <version>1.3.4</version>
     <vendor email="support@prismstats.com" url="https://prismstats.com">PrismStats</vendor>
     <idea-version since-build="221" />
 
@@ -25,8 +25,8 @@
 
     <change-notes>
         <![CDATA[
-            <h2>1.3.2 - Refactor document change event handling logic</h2>
-            <p>Simplified the logic inside the documentChangedNonBulk method in DocumentListener for clarity, efficiency, and readability. Instead of storing old values and calculating changes, the updated code makes decisions based on event differences, eliminating unnecessary operations. This also improves thread-safety by reducing shared state manipulation</p>
+            <h2>1.3.4 - Correct calculation of changes in DocumentListener</h2>
+            <p>Improved the handling of document change events in the DocumentListener module. The new implementation now correctly counts the number of added or removed characters/lines, ignoring white spaces and new line characters. Additionally, every change in lines (either removed or added) is counted and recorded more accurately</p>
         ]]>
     </change-notes>
 
